--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>CAMBIAR TITULO</title>
+<title>JANET GAMES HOST PS4 9.00</title>
 <link rel="stylesheet" href="style.css">
 <script>
 	if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
